--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ROCK PAPER SCISSORS</title>
+    <link rel="icon" href="Untitld.png">
     
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <header>ROCK PAPER SCISSORS</header>
     <DIv ID="gamediv">
         <h1 class="gametext" id="playerText">Player: </h1>
         <h1 class="gametext" id="computertext">Computer: </h1>
